# Computer-Graphics-UCSP

./: .gitignore
OPENGL_PROJECTS/src/: CMakeLists.txt
OPENGL_PROJECTS/src/ConvexHull2D/: CMakeLists.txt  convex_hull.cpp  convex_hull.h  main.cpp
OPENGL_PROJECTS/src/Hello_square/: CMakeLists.txt  main.cpp  transformations.cpp  transformations.h
OPENGL_PROJECTS/src/Projection_NatteRobbins/: CMakeLists.txt  projection.c
OPENGL_PROJECTS/src/Rubik/: CMakeLists.txt  Quaternion.h  README.md  RubikCube.cpp  RubikCube.h  camera.cpp  defineRubik.cpp  fragmentShader.glsl  loadTextures.cpp  main.cpp  vertexShaderCube.glsl
OPENGL_PROJECTS/src/RubikCamera/: CMakeLists.txt  RubikCube.cpp  RubikCube.h  camera.h  defineRubik.h  fragmentShader.glsl  main.cpp  shader.h  vertexShader.glsl
OPENGL_PROJECTS/src/Rubik_Mapeo/: CMakeLists.txt  RubikCube.cpp  RubikCube.h  loadTextures.h  main.cpp  shader.cpp  stb_image.h  vertexShader.glsl
OPENGL_PROJECTS/src/Tutorial_01/: CMakeLists.txt  main.cpp
OPENGL_PROJECTS/src/Tutorial_02/: CMakeLists.txt  main.cpp
OPENGL_PROJECTS/src/Tutorial_camera/: CMakeLists.txt  camera.cpp  fragmentShader.glsl  main.cpp
OPENGL_PROJECTS/src/Tutorial_hello_triangle/: CMakeLists.txt
OPENGL_PROJECTS/src/bezier_curves/: CMakeLists.txt  bezier_curve.cpp  bezier_curve.h  fragmentShader.glsl  main.cpp
OPENGL_PROJECTS/src/casa_tutorial/: CMakeLists.txt  main.cpp
OPENGL_PROJECTS/src/circulo_con_poligonos_regulares/: CMakeLists.txt  fragmentShader.glsl  main.cpp  regular_polygon.cpp  regular_polygon.h  shader.cpp  vertexShader.glsl
(+46 files in other folders)
